fix most dredd tests
