# swagger.json
@@ -12,22 +12,8 @@
         "application/json"
     ],
     "paths": {
-        "/": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "Swagger schema",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            }
-        },
         "/token": {
             "post": {
-                "summary": "Get token.",
-                "description": "Protected by login form (username & password as form-data to this page).",
                 "parameters": [
                     {
                         "name": "body",
@@ -90,7 +76,11 @@
                         "required": true,
                         "description": "Artist to add",
                         "schema": {
-                            "$ref": "#/definitions/ArtistType"
+                            "properties": {
+                                "artist": {
+                                    "$ref": "#/definitions/ArtistType"
+                                }
+                            }
                         }
                     }
                 ],
@@ -142,7 +132,11 @@
                         "required": true,
                         "description": "Artist to update",
                         "schema": {
-                            "$ref": "#/definitions/ArtistType"
+                            "properties": {
+                                "artist": {
+                                    "$ref": "#/definitions/ArtistType"
+                                }
+                            }
                         }
                     },
                     {
@@ -157,7 +151,9 @@
                     "200": {
                         "description": "Artist updated",
                         "schema": {
-                            "$ref": "#/definitions/Artist"
+                            "items": {
+                                "$ref": "#/definitions/Artist"
+                            }
                         }
                     },
                     "400": {
@@ -177,7 +173,11 @@
                         "required": true,
                         "description": "Artist to patch",
                         "schema": {
-                            "$ref": "#/definitions/ArtistType"
+                            "properties": {
+                                "artist": {
+                                    "$ref": "#/definitions/ArtistType"
+                                }
+                            }
                         }
                     },
                     {
@@ -283,7 +283,11 @@
                         "required": true,
                         "description": "Label to add",
                         "schema": {
-                            "$ref": "#/definitions/LabelType"
+                            "properties": {
+                                "label": {
+                                    "$ref": "#/definitions/LabelType"
+                                }
+                            }
                         }
                     }
                 ],
@@ -326,15 +330,18 @@
             },
             "put": {
                 "summary": "Update a label.",
-                "description": "ApiDoc(\n input=\"AppBundle\\Form\\Type\\LabelType\",\n output=\"AppBundle\\Entity\\Label\",\n statusCodes = {\n    200 = \"Label updated\",\n    404 = \"Label not found\"\n  }\n)",
                 "parameters": [
                     {
                         "name": "body",
                         "in": "body",
                         "required": true,
-                        "description": "Label to add",
+                        "description": "Label to update",
                         "schema": {
-                            "$ref": "#/definitions/LabelType"
+                            "properties": {
+                                "label": {
+                                    "$ref": "#/definitions/LabelType"
+                                }
+                            }
                         }
                     },
                     {
@@ -371,7 +378,11 @@
                         "required": true,
                         "description": "Label to add",
                         "schema": {
-                            "$ref": "#/definitions/LabelType"
+                            "properties": {
+                                "label": {
+                                    "$ref": "#/definitions/LabelType"
+                                }
+                            }
                         }
                     },
                     {
@@ -441,7 +452,11 @@
                         "required": true,
                         "description": "Gig to add",
                         "schema": {
-                            "$ref": "#/definitions/GigType"
+                            "properties": {
+                                "gig": {
+                                    "$ref": "#/definitions/GigType"
+                                }
+                            }
                         }
                     }
                 ],
@@ -491,7 +506,11 @@
                         "required": true,
                         "description": "Gig to add",
                         "schema": {
-                            "$ref": "#/definitions/GigType"
+                            "properties": {
+                                "gig": {
+                                    "$ref": "#/definitions/GigType"
+                                }
+                            }
                         }
                     },
                     {
@@ -526,7 +545,11 @@
                         "required": true,
                         "description": "Gig to add",
                         "schema": {
-                            "$ref": "#/definitions/GigType"
+                            "properties": {
+                                "gig": {
+                                    "$ref": "#/definitions/GigType"
+                                }
+                            }
                         }
                     },
                     {
@@ -573,6 +596,47 @@
                     }
                 }
             }
+        },
+        "/tokens": {
+            "post": {
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "description": "Authentication credentials",
+                        "schema": {
+                            "required": [
+                                "username",
+                                "password"
+                            ],
+                            "properties": {
+                                "username": {
+                                    "type": "string"
+                                },
+                                "password": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Auth granted",
+                        "schema": {
+                            "properties": {
+                                "apiKey": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Invalid credentials"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -580,6 +644,11 @@
             "type": "object"
         },
         "Artist": {
+            "required": [
+                "name",
+                "slug",
+                "bio"
+            ],
             "properties": {
                 "id": {
                     "type": "integer"
@@ -618,19 +687,21 @@
                     "type": "string"
                 },
                 "gigs": {
-                    "example": "[1, 2, 3]",
                     "type": "array",
-                    "format": "[AppBundle\\Entity\\Gig id]"
+                    "format": "[App\\Entity\\Gig id]"
                 },
                 "labels": {
-                    "example": "[1, 2, 3]",
                     "type": "array",
-                    "format": "[AppBundle\\Entity\\Label id]"
+                    "format": "[App\\Entity\\Label id]"
                 }
             },
             "type": "object"
         },
         "Label": {
+            "required": [
+                "name",
+                "slug"
+            ],
             "properties": {
                 "id": {
                     "type": "integer"
@@ -667,6 +738,11 @@
             "type": "object"
         },
         "Gig": {
+            "required": [
+                "name",
+                "startDate",
+                "address"
+            ],
             "properties": {
                 "id": {
                     "type": "integer"
@@ -676,11 +752,13 @@
                 },
                 "start_date": {
                     "type": "string",
-                    "format": "date-time"
+                    "format": "date-time",
+                    "pattern": "Y-m-d H:i:s"
                 },
                 "end_date": {
                     "type": "string",
-                    "format": "date-time"
+                    "format": "date-time",
+                    "pattern": "Y-m-d H:i:s"
                 },
                 "venue": {
                     "type": "string"
